fixed scrollbar jumping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@
 
 html {
   color: #e0dfdc;
+  scrollbar-width: 17px;
 }
 
 body {
